# HWP-Loader

./: .gitignore  CHANGELOG.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
src/langchain_hwp_hwpx/: __init__.py  compat.py  loader.py
tests/: test_directory_loader.py  test_loader.py
